example/public/styles.css
body {
  background-color: palevioletred;
  color: white
}

.increment, .decrement {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  background-color: palevioletred;
  border-style: none;
  border: solid white;
  color: white;
  font-size: 1.5rem;
  line-height: 1;
  font-weight: 600;
}

.count {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  text-align: center;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 600;
  padding: 0;
  margin: 0;
}

